--- a/index.html
+++ b/index.html
@@ -33,6 +33,36 @@
                     </form>
                 </div>
             </div>
+            <div class="columns" id="filterData">
+                <div class="column col-4">
+                    <div class="form-group input-group">
+                        <label class="form-label">Наименование: </label>
+                        <input id="" name="" class="form-input " type="text" maxlength="255">
+                    </div>
+                </div>
+                <div class="column col-4">
+                    <div class="form-group input-group">
+                        <label class="form-label" for="search-input">Материал: </label>
+                        <div class="has-icon-right">
+                            <input type="text" id="" data-type="searchInput" data-element="data" data-reference="Справочник.Материалы.Наименование" name="Материал" class="form-input" placeholder="Выберите элемент" style="width: -webkit-fill-available; background-color: white;" value="" readonly="">
+                            <i class="form-icon icon icon-caret"></i>
+                        </div>
+                        <div data-id="" class="dropdown-content" style="display: none;"><div data-value="option1">Option 1</div>
+                            <div data-value="option2">Option 2</div>
+                            <div data-value="option3">Option 3</div>
+                            <div data-value="option4">Option 4</div>
+                            <div data-value="option5">Option 5</div>
+                            <div class="add-button">+ Добавить</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column col-4">
+                    <div class="form-group input-group">
+                        <label class="form-label" for="">Поиск: </label>
+                        <input class="form-input" type="text" id="" name="" placeholder="Поиск">                       
+                    </div>
+                </div>
+            </div>
             <div id="tableContent" class="">
                 <div class="columns">
                     <div class="column">
