--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <div id="desktop-controls"></div>
     <ul id="custom-context-menu" class="context-menu">
     </ul>
     <div class="container">
@@ -70,4 +71,5 @@
     <div id="dialog-container"></div>
 </body>
 <script src="index.js"></script>
+<script src="window.js"></script>
 </html>
